# RMG146

./: CMakeLists.txt  README.md  package.xml
include/imu_module/: MadgwickAHRS.hpp  RMG146.hpp  main.hpp
src/imu_module/: MadgwickAHRS.cpp  RMG146.cpp  main.cpp
